--- a/i18n/qqq.json
+++ b/i18n/qqq.json
@@ -4,15 +4,5 @@
 			"Fannon"
 		]
 	},
-	"idprovider-desc": "{{desc|name=Substitutor|url=https://www.mediawiki.org/wiki/Extension:Substitutor}}",
-
-
-
-    "idp-apiparam-skipuniquetest": "API parameter description",
-    "idp-apiparam-prefix": "API parameter description",
-
-    "idp-random-apiparam-type": "API parameter description",
-
-    "idp-increment-apiparam-start": "API parameter description",
-    "idp-increment-apiparam-padding": "API parameter description"
+	"qrlite-desc": "{{desc|name=QRLite|url=https://www.mediawiki.org/wiki/Extension:QRLite}}",
 }
